--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_Barne_klar.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_Barne_klar.html
@@ -153,8 +153,8 @@
       </section>
 
       <section class="Sko_dame">
-        <a href="D_dame_klær.html"><img src="bilder/model damer.jpg" alt="bilde"> </a>
-        <a href="D_dame_klær.html">
+        <a href="D_dame_klar.html"><img src="bilder/model damer.jpg" alt="bilde"> </a>
+        <a href="D_dame_klar.html">
           <p>Dame klær</p>
         </a>
       </section>
@@ -168,7 +168,6 @@
 
     </section>
 
-    </section>
 
     <h1 class="h1_over">Barne klær</h1>
 
@@ -332,6 +331,7 @@
 
 
 
+
       <section class="velge_klær">
         <div class="bilde"><img src="bilder/barn1.jpg" alt="bilde"></div>
         <div class="Merke">Polo Ralph Lauren </div>
@@ -484,7 +484,7 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="D_dame_klær.html">Klær</a>
+              <td><a href="D_dame_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
