--- a/KaranSinMorsommeFerie/portefolje/index.html
+++ b/KaranSinMorsommeFerie/portefolje/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>KARAN SINGH SANDHU</title>
-  <link rel="stylesheet" href="main2.css">
+  <link rel="stylesheet" href="main.css">
   <script src="main.js">
 
   </script>
@@ -44,65 +44,31 @@
     </section>
 
     <div id="London" class="tabcontent">
-      <section class="hele_tab">
-      <img src="A Hoved Database/bilder_klar_riktig/genser001a.jpg" class="bilde_tabcontent" alt="">
-      <section class="resten_tab_content">
-      <h1>KLESNETTSIDE MED DATABSE</h1>
-      <p class="tekst_om">Dette er en klesnettside med database som jeg lagde på slutten av året</p>
-      <h2><a href="A Hoved Database/index.html">Trykke her for å se siden</a></h2>
-      </section>
-      </section>
+      <h1>London</h1>
+      <p>London is the capital city of England.</p>
     </div>
 
     <div id="Paris" class="tabcontent">
-      <section class="hele_tab">
-      <img src="Klesnettside prosjekt/bilder/Louis.jpg" class="bilde_tabcontent" alt="">
-      <section class="resten_tab_content">
-      <h1>KLESNETTSIDE UTEN DATABASE</h1>
-      <p class="tekst_om">Dette er en klesnettside uten Database som jeg lagde på starten av året</p>
-      <h2><a href="Klesnettside prosjekt/index.html">Trykke her for å se siden</a></h2>
-    </section>
-    </section>
-      </div>
+      <h1>Paris</h1>
+      <p>Paris is the capital of France.</p>
+    </div>
 
     <div id="Tokyo" class="tabcontent">
-      <section class="hele_tab">
-      <img src="internett_historie/internett.jpg" class="bilde_tabcontent" alt="">
-      <section class="resten_tab_content">
-      <h1>NETT SIKKERHET</h1>
-      <p class="tekst_om">Denne siden handler om NETT SIKKERHET.</p>
-      <h2><a href="internett_historie/internett.html">Trykke her for å se siden</a></h2>
-    </section>
-    </section>
+      <h1>Tokyo</h1>
+      <p>Tokyo is the capital of Japan.</p>
     </div>
 
     <div id="Oslo" class="tabcontent">
-      <section class="hele_tab">
-      <img src="nettsted nettsikkerhet/bilder/nettvett.png" class="bilde_tabcontent" alt="">
-      <section class="resten_tab_content">
-      <h1>INTERNETTETS HISTORIE</h1>
-      <p class="tekst_om">Denne siden handler om Hvordan internettet er lagd.</p>
-      <h2><a href="nettsted nettsikkerhet/index.html">Trykke her for å se siden</a></h2>
-    </section>
-    </section>
+      <h1>Oslo</h1>
+      <p>Oslo is the capital of Norway.</p>
     </div>
 
-    <div id="signaler" class="tabcontent">
-      <section class="hele_tab">
-      <img src="internett_historie/internett.jpg" class="bilde_tabcontent" alt="">
-      <section class="resten_tab_content">
-      <h1>SIGNALER I DATAUTSTYR</h1>
-      <p class="tekst_om">Denne siden handler om fysiskse signaler i datautstyr.</p>
-      <h2><a href="signaler i datautstyr/index.html">Trykke her for å se siden</a></h2>
-    </section>
-    </section>
-    </div>
+
 
     <button class="tablink" onclick="openCity('London', this, 'red')" id="defaultOpen">Nettside med Database</button>
     <button class="tablink" onclick="openCity('Paris', this, 'green')">Klesnettside</button>
     <button class="tablink" onclick="openCity('Tokyo', this, 'blue')">Nett sikkerhet</button>
     <button class="tablink" onclick="openCity('Oslo', this, 'orange')">Internetts Historie</button>
-    <button class="tablink" onclick="openCity('signaler', this, 'pink')">Signaler</button>
 
 
 </header>
