--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_Barne_klar.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_Barne_klar.html
@@ -1,4 +1,4 @@
--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="nb" dir="ltr">
 
 <head>
@@ -10,13 +10,10 @@
 
 <body>
 
-
     <header>
       <section class="lang">
         <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
       </section>
-
-
 
       <section class="lenke damherbar">
         <a href="Dame.html">DAME </a>
@@ -27,42 +24,26 @@
       </section>
 
 
-
       <section class="usynlig1">
       </section>
-
-
 
       <section>
         <a href="index.html"><img src="../A Hoved Database/bilder_klar_riktig/ny_logo.png" alt="logo" class="logo"></a>
       </section>
 
-
-
       <section class="usynlig">
       </section>
 
 
-
       <div class="lenke logginn">
-
-
         <a href="logginn.html"><img src="../A Hoved Database/bilder_klar_riktig/logg inn.png" alt="bilde" class="logginnbilde"> </a>
-
         <a href="logginn.html"><br>LOGG INN</a>
-
       </div>
 
 
-
-
-
       <div class="lenke logginn">
-
         <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
-
         <a href="onskeliste.html">LISTE</a>
-
       </div>
 
     </header>
@@ -71,10 +52,7 @@
 
       <nav class="navigation">
 
-
-
         <section class="klesvalg">
-
 
 
           <section class="dropned">
@@ -87,7 +65,6 @@
             </section>
           </section>
 
-
           <section class="dropned">
             <button class="dropknapp"><a href="sko.html">Sko</a>
 
@@ -99,8 +76,6 @@
             </section>
           </section>
 
-
-
           <section class="dropned">
             <button class="dropknapp"><a href="virker_ikke.html">Sport</a>
             </button>
@@ -110,8 +85,6 @@
               <a href="virker_ikke.html">Sport relatert</a>
             </section>
           </section>
-
-
 
           <section class="dropned">
             <button class="dropknapp"><a href="virker_ikke.html">Accesories</a>
@@ -123,25 +96,20 @@
             </section>
           </section>
 
-
           <section class="dropned">
             <button class="dropknapp"><a href="Salg.html">Salg</a>
             </button>
-
           </section>
 
-
         </section>
-
 
         <section class="denusynlig">
-
         </section>
+
         <section class="søkemotor">
           <input type="text" placeholder="Søk..">
           <button type="submit">søk</button>
         </section>
-
       </nav>
 
 
