--- a/KaranSinMorsommeFerie/portefolje/A Hoved Database/index.html
+++ b/KaranSinMorsommeFerie/portefolje/A Hoved Database/index.html
@@ -57,7 +57,7 @@
 
       <!-- kode for  ønskeliste og knappene er under her  -->
       <section class="lenke  ønskeliste">
-        <a href="onskeliste.html"><img src="bilder_klar_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
+        <a href="onskeliste.html"><img src="bilder_klar_riktig/onskeliste.png" alt="bilde" class="iconbilde"> </a>
         <a href="onskeliste.html">ØNSKELISTE</a>
       </section>
 
