--- a/KaranSinMorsommeFerie/portefolje/A Hoved Database/jakker.html
+++ b/KaranSinMorsommeFerie/portefolje/A Hoved Database/jakker.html
@@ -56,7 +56,7 @@
 
 
       <section class="lenke logginn">
-        <a href="onskeliste.html"><img src="bilder_klar_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
+        <a href="onskeliste.html"><img src="bilder_klar_riktig/onskeliste.png" alt="bilde" class="iconbilde"> </a>
         <a href="onskeliste.html">ØNSKELISTE</a>
       </section>
 
