--- a/KaranSinMorsommeFerie/portefolje/A Hoved Database/logginn.html
+++ b/KaranSinMorsommeFerie/portefolje/A Hoved Database/logginn.html
@@ -41,7 +41,7 @@
 
       <!-- kode for  ønskeliste knappen er under her  -->
       <section class="lenke">
-        <a href="onskeliste.html"><img src="bilder_klar_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
+        <a href="onskeliste.html"><img src="bilder_klar_riktig/onskeliste.png" alt="bilde" class="iconbilde"> </a>
         <a href="onskeliste.html">ØNSKELISTE</a>
       </section>
       <!-- kode for Handlekurv knappen er under her  -->
