--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/H_herre_klar.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/H_herre_klar.html
@@ -42,7 +42,7 @@
 
 
       <div class="lenke logginn">
-        <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
+        <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/onskeliste.png" alt="bilde" class="logginnbilde"> </a>
         <a href="onskeliste.html">LISTE</a>
       </div>
 
@@ -112,7 +112,7 @@
         </section>
       </nav>
 
-      
+
     <section class="sko_kjønn">
       <section class="Sko_herre">
         <a href="H_herre_klar.html"><img src="bilder/herre klær.jpg" class="herre_img" alt="bilde"> </a>
