--- a/KaranSinMorsommeFerie/portefolje/A Hoved Database/handlekurv.html
+++ b/KaranSinMorsommeFerie/portefolje/A Hoved Database/handlekurv.html
@@ -42,7 +42,7 @@
 
 
       <section class="lenke">
-        <a href="onskeliste.html"><img src="bilder_klar_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
+        <a href="onskeliste.html"><img src="bilder_klar_riktig/onskeliste.png" alt="bilde" class="iconbilde"> </a>
         <a href="onskeliste.html">ØNSKELISTE</a>
       </section>
 
