--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_barn_sko.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_barn_sko.html
@@ -57,7 +57,7 @@
 
     <div class="lenke logginn">
 
-      <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/onskeliste.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="onskeliste.html">LISTE</a>
 
