--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre_klesplagg1.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre_klesplagg1.html
@@ -41,7 +41,7 @@
 
 
       <div class="lenke logginn">
-        <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
+        <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/onskeliste.png" alt="bilde" class="logginnbilde"> </a>
         <a href="onskeliste.html">LISTE</a>
       </div>
 
@@ -111,7 +111,7 @@
         </section>
       </nav>
 
-      
+
     <section class="under_nav">
       <section class="women_get">
         <a href="D_dame_klar.html"> Women: get up to 60% off dresses!!</a>
