--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/onskeliste.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/onskeliste.html
@@ -56,7 +56,7 @@
 
     <div class="lenke logginn">
 
-      <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/ønskeliste.png" alt="" class="logginnbilde"> </a>
+      <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/onskeliste.png" alt="" class="logginnbilde"> </a>
 
       <a href="onskeliste.html">LISTE</a>
 
