--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/trykk_sok.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/trykk_sok.html
@@ -43,7 +43,7 @@
 
 
       <div class="lenke logginn">
-        <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
+        <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/onskeliste.png" alt="bilde" class="logginnbilde"> </a>
         <a href="onskeliste.html">LISTE</a>
       </div>
 
@@ -112,7 +112,7 @@
           <button type="submit">søk</button>
         </section>
       </nav>
-      
+
 
 
     <section class="reklame2">
