Siste endringer, header virker

--- a/KaranSinMorsommeFerie/portefolje/index2.html
+++ b/KaranSinMorsommeFerie/portefolje/index2.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>KARAN SINGH SANDHU</title>
+  <link rel="shortcut icon" type="image/png" href="A Hoved Database/bilder_klar_riktig/ny_logo.png">
   <link rel="stylesheet" href="main2.css">
   <script src="main.js">
 
